--- a/style.css
+++ b/style.css
@@ -108,6 +108,53 @@ h2 {
     padding: 10px;
   }
   .btns {
+    margin: 20px 0 20px 90px;
+  }
+  .btns button {
+    margin: 5px;
+  }
+  .inputs {
+    width: 100%;
+    gap: 5px;
+    justify-content: center;
+  }
+
+  .inputs input {
+    text-align: center;
+    width: 20%;
+  }
+  img {
+    margin-right: 20px;
+  }
+  .displayNumbers {
+    width: 95%;
+    height: 55vh;
+    background-color: rgb(72, 72, 183);
+    align-items: center;
+  }
+  .card {
+    background-color: rgb(71, 69, 69);
+    width: 180px;
+    height: 200px;
+    margin: 20px;
+    border-radius: 10px;
+  }
+  .card h2 {
+    font-size: 25px;
+  }
+  .card p {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(37, 35, 35);
+    padding: 10px;
+  }
+  .btns {
     margin: 70px auto 20px;
     display: flex;
     flex-direction: row;
