--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ img {
   background-color: rgb(72, 72, 183);
   border: none;
   margin: auto 20px;
+  cursor: pointer;
 }
 .inputs {
   display: flex;
@@ -123,6 +124,7 @@ h2 {
   }
   .btns button {
     margin: 5px;
+    cursor: pointer;
   }
   .inputs {
     width: 100%;
