--- a/style.css
+++ b/style.css
@@ -225,6 +225,14 @@ h2 {
   .multiPlay {
     width: 100%;
     height: 38vh;
-    text-align: start;
+    text-align: center;
+  }
+  .multiPlay p {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    width: center;
+    word-wrap: break-word;
+    text-wrap: wrap;
   }
 }
