--- a/style.css
+++ b/style.css
@@ -22,14 +22,14 @@ body {
   position: relative;
 }
 img {
-  width: 90px;
-  height: 90px;
+  width: 80px;
+  height: 80px;
   position: absolute;
   top: 10px;
   border-radius: 10px;
 }
 .btns {
-  margin: 20px auto;
+  margin: 30px auto;
 }
 .btns button {
   padding: 10px 20px;
@@ -44,6 +44,7 @@ img {
 }
 .inputs {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
 }
@@ -53,11 +54,13 @@ img {
   margin: 10px;
 }
 .inputs input {
-  padding: 10px;
+  width: 45px;
+  padding: 10px 25px;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 18px;
   font-family: "Playpen Sans", cursive;
   font-weight: 600;
+  text-align: start;
 }
 h2 {
   font-size: 30px;
@@ -66,10 +69,10 @@ h2 {
   color: white;
 }
 .displayNumbers {
-  width: 100%;
-  height: 400px;
+  width: 95%;
+  height: 30vh;
   background-color: rgb(72, 72, 183);
-  margin: 20px auto;
+  margin: 10px auto;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -79,13 +82,15 @@ h2 {
 }
 .card {
   background-color: rgb(71, 69, 69);
-  width: 210px;
-  height: 220px;
+  width: 200px;
+  height: 210px;
   display: flex;
   flex-direction: column;
   margin: 6px 15px;
   text-align: center;
   border-radius: 10px;
+  word-wrap: break-word;
+  text-wrap: wrap;
 }
 .card h2 {
   font-size: 22px;
@@ -101,17 +106,40 @@ h2 {
 .kontostand p,
 .inputValue p {
   margin: auto;
+  font-size: 20px;
 }
 .multiPlay {
-  width: 100%;
-  height: 70vh;
+  width: 95%;
+  height: 50vh;
   margin: 5px auto;
   text-align: start;
+  padding: 5px;
+  font-size: 15px;
+  background-color: rgb(71, 69, 69);
 }
 .multiPlay p {
-  font-size: 16px;
+  width: 100%;
+  font-size: 15px;
+  word-wrap: break-word;
+  text-wrap: wrap;
 }
-
+.containerresult {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+.resMultiPlay {
+  background-color: blueviolet;
+  color: white;
+  border-radius: 10px;
+  margin: 0 auto;
+  width: 45%;
+  height: 15vh;
+  text-align: center;
+  align-items: center;
+  font-size: 25px;
+  font-weight: 600;
+}
 @media only screen and (max-width: 1200px) {
   .container {
     width: 100%;
@@ -120,7 +148,7 @@ h2 {
     padding: 10px;
   }
   .btns {
-    margin: 20px 0 20px 90px;
+    margin: 10px 0 5px 90px;
   }
   .btns button {
     margin: 5px;
@@ -128,40 +156,57 @@ h2 {
   }
   .inputs {
     width: 100%;
-    gap: 5px;
+    gap: 1px;
+    margin: 0 auto;
     justify-content: center;
+    align-items: start;
   }
 
   .inputs input {
     text-align: center;
-    width: 20%;
+    width: 5%;
+    height: 8%;
   }
   img {
     margin-right: 20px;
   }
   .displayNumbers {
-    width: 100%;
+    width: 95%;
     height: 20vh;
     background-color: rgb(72, 72, 183);
     align-items: center;
+    justify-content: center;
   }
   .card {
     background-color: rgb(71, 69, 69);
-    width: 120px;
-    height: 140px;
+    width: 135px;
+    height: 145px;
     margin: 2px;
     border-radius: 10px;
   }
   .card h2 {
-    font-size: 16px;
+    font-size: 14px;
+    margin: 5px;
+    padding: 3px;
+    text-align: start;
   }
   .card p {
     font-size: 20px;
   }
   .multiPlay {
-    width: 100%;
-    height: 42vh;
-    text-align: start;
+    width: 95%;
+    height: 20vh;
+    margin: 5px auto;
+    font-size: 15px;
+  }
+  .multiPlay p {
+    font-size: 15px;
+  }
+  .resMultiPlay {
+    width: 50%;
+    height: 10vh;
+    margin: 2px auto;
+    text-align: center;
   }
 }
 
@@ -173,7 +218,7 @@ h2 {
     padding: 10px;
   }
   .btns {
-    margin: 80px auto 20px;
+    margin: 100px auto 0;
     display: flex;
     flex-wrap: wrap;
   }
@@ -194,45 +239,51 @@ h2 {
 
   .inputs input {
     text-align: center;
-    width: 15%;
-    height: 20%;
+    width: 35px;
+
+    height: 10%;
+    font-size: 14px;
+    border: none;
   }
   .displayNumbers {
     width: 100%;
     height: 15vh;
     background-color: rgb(72, 72, 183);
-    margin: 20px auto;
+    margin: 10px auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 2px;
+    justify-content: start;
+
+    gap: 1px;
     border-radius: 10px;
   }
   .card {
     background-color: rgb(71, 69, 69);
-    width: 110px;
+    width: 105px;
     height: 120px;
     margin: 2px;
     border-radius: 10px;
+    padding: 3px;
   }
   .card h2 {
-    font-size: 12px;
+    font-size: 13px;
+    text-align: center;
+    margin: 2px;
   }
   .card p {
     font-size: 15px;
   }
+
   .multiPlay {
-    width: 100%;
-    height: 38vh;
-    text-align: center;
-  }
-  .multiPlay p {
-    width: 100%;
-    text-align: center;
+    width: 95%;
+    height: 20vh;
+    margin: 5px auto;
     font-size: 20px;
-    width: center;
-    word-wrap: break-word;
-    text-wrap: wrap;
+  }
+  .resMultiPlay {
+    width: 45%;
+    height: 10vh;
+    margin: 5px auto;
+    font-size: 20px;
   }
 }
